--- a/app/globals.css
+++ b/app/globals.css
@@ -128,7 +128,7 @@ nav ul li a:hover::after{
     margin: 10px 0;
 }
 .tab-contents ul li span{
-    color: #b54769;
+    color: #00FF89;
     font-size: 14px;
 }
 .tab-contents{
